# Nqlix

./: .env  .eslintrc.cjs  PRINTER_FIX_README.md  PRINTER_SETUP.md  PRINTER_TROUBLESHOOTING.md  README.md  REALTIME_SYSTEM.md  SERVER_CONFIGURATION.md  TAURI_UPDATER_SETUP.md  TICKET_LAYOUT.md  UPDATER_SETUP.md  UPDATE_SYSTEM.md  UPDATE_SYSTEM_SUMMARY.md  generate-keys.sh  index.html  install_wasla.sh  package.json  pnpm-lock.yaml  printer-config.json  setup-env.sh  setup-realtime.sh  temp_print_1c184724-7c6d-48ba-9012-acd534ee598f.cjs  test-connection-debug.html  test-connection.html  test-day-pass-printing.js  test-network-discovery.sh  test-print-direct.ps1  test-queue-reorder.js  test-realtime.sh  test-signing.ps1  test-websocket.html  test_logo.js  vite.config.ts  wasla_ubuntu24_solution.md
.github/workflows/: build-check.yml  ci.yml  release.yml
scripts/: PRINTER_ENV_SETUP.md  diagnose-printer.js  example-usage.js  fix-printer-connection.js  fix-printer-windows.bat  print.bat  printer-diagnostics.ps1  setup-printer-env-linux.sh  setup-printer-env-windows.bat  setup-printer-env-windows.ps1  setup-realtime-triggers.sql  setup-signing-key.ps1  setup-updater.cjs  setup-windows-startup.bat  simple-print.ps1  test-all-tickets.js  test-booking-fix.cjs  test-printer-connection.js  test-printer-windows.js  test-printer.js  test-standard-ticket.js  test-tauri-command.js
src/: layout.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  printer-config.json  tauri.conf.json  temp_booking_23c3087b-3397-4b51-b1d4-f4c3a5b667cb.cjs
src-tauri/src/: main.rs  network_discovery.rs  printer.rs  realtime.rs  websocket_realtime.rs
src/components/: AppControls.tsx  Dashboard.tsx  DriverEntryTicket.tsx  DriverExitTicket.tsx  EnhancedConnectionTest.tsx  EnhancedMqttConnectionTest.tsx  InitScreen.tsx  (+16 more)
(+62 files in other folders)
