[package]
name = "nqlix_desktop_app"
version = "0.0.11"
description = "Nqlix Desktop Application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-tungstenite = "0.20"
once_cell = "1.19"
tauri-plugin-printer = "1.0.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
