[package]
name = "wasla_desktop_app"
version = "2.2.7"
description = "Wasla Desktop Application - Tunisia Transportation Management System"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "updater", "api-all", "global-shortcut"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-tungstenite = "0.20"
once_cell = "1.19"
auto-launch = "0.5"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
dotenvy = "0.15"

[features]
custom-protocol = ["tauri/custom-protocol"]
